CAMEL-10141: lets centralize maven-surefire-plugin configuration in parent pom for Java 9